--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,14 +1,14 @@
 <footer>
-    <div class="f-info">
-        <div class="f-info-socials">
+    <div class="f-info" style="text-align: center;">
+        <div class="f-info-socials" style="display: flex; gap: 1em; justify-content: center; margin-top: 1em; padding-top: 3em; padding-bottom: 0.6em; font-size: small;">
             <i class="fa-brands fa-square-facebook"></i>
             <i class="fa-brands fa-square-instagram"></i>
             <i class="fa-brands fa-linkedin"></i>
         </div>
-        <div><b>&copy; Sunax Privat Limited</b></div>
-        <div class="f-info-links">
-            <a href="/privacy">Privacy</a>
-            <a href="/terms">Terms</a>
+        <div style="font-size: small;"><b>&copy; Private Limited</b></div>
+        <div class="f-info-links" style="font-size: small; text-decoration: none; text-align: center;">
+            <a style="text-decoration: none; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: small;" href="/privacy" >Privacy</a>
+            <a style="text-decoration: none; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: small;" href="/terms">Terms</a>
         </div>
     </div>
 </footer>
