--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,8 +1,28 @@
 <% layout('/layouts/boilerplate') %>
 <script>
     const mapToken = "<%= process.env.MAP_TOKEN %>";
-    const coordinates = <%- JSON.stringify(listing.geometry.coordinates) %>;
-    const listing = <%- JSON.stringify(listing) %>;
+    <% if (listing && listing.geometry && listing.geometry.coordinates) { %>
+        mapboxgl.accessToken = mapToken;
+        const coordinates = <%- JSON.stringify(listing.geometry.coordinates) %>;
+
+        const map = new mapboxgl.Map({
+            container: 'map', // container ID
+            style: 'mapbox://styles/mapbox/streets-v12', // style URL
+            center: coordinates, // starting position [lng, lat]
+            zoom: 9 // starting zoom
+        });
+
+        const marker = new mapboxgl.Marker({
+            color: 'red',
+            draggable: true
+        }).setLngLat(coordinates)
+        .setPopup(new mapboxgl.Popup({offset: 25})
+        .setHTML(`<h4><%= listing.location %></h4><p><b>Exact Location Will Be Provided After Booking</b> </p>`)
+        .setMaxWidth("500px"))
+        .addTo(map); 
+    <% } else { %>
+        console.error("Map data is not available.");
+    <% } %>
 </script>
 <div class="row">
     <div class="col-10 offset-1 mt-3">
