--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,111 +1,66 @@
 <% layout('/layouts/boilerplate') %>
 <script>
-    const mapToken = "<%= process.env.MAP_TOKEN %>";
+    window.mapToken = "<%= process.env.MAP_TOKEN %>";
     <% if (listing && listing.geometry && listing.geometry.coordinates) { %>
         mapboxgl.accessToken = mapToken;
-        const coordinates = <%- JSON.stringify(listing.geometry.coordinates) %>;
+        window.coordinates = <%- JSON.stringify(listing.geometry.coordinates) %>;
 
         const map = new mapboxgl.Map({
-            container: 'map', // container ID
-            style: 'mapbox://styles/mapbox/streets-v12', // style URL
-            center: coordinates, // starting position [lng, lat]
-            zoom: 9 // starting zoom
+            container: 'map',
+            style: 'mapbox://styles/mapbox/streets-v12',
+            center: window.coordinates,
+            zoom: 9
         });
 
-        const marker = new mapboxgl.Marker({
+        new mapboxgl.Marker({
             color: 'red',
             draggable: true
         }).setLngLat(coordinates)
-        .setPopup(new mapboxgl.Popup({offset: 25})
-        .setHTML(`<h4><%= listing.location %></h4><p><b>Exact Location Will Be Provided After Booking</b> </p>`)
-        .setMaxWidth("500px"))
-        .addTo(map); 
+        .setPopup(new mapboxgl.Popup({ offset: 25 })
+            .setHTML(`<h4><%= listing.location %></h4><p><b>Exact Location Will Be Provided After Booking</b></p>`)
+            .setMaxWidth("300px"))
+        .addTo(map);
     <% } else { %>
         console.error("Map data is not available.");
     <% } %>
 </script>
-<div class="row">
-    <div class="col-10 offset-1 mt-3">
-        <h3><%= listing.title %></h3>
-    </div>
-    <div class="card col-12 offset-1 show-card listing-card">
-        <img class="card-img-top mb-2 show-img" src="<%= listing.image.url %>" alt="list_img" >
-        <div class="card-body">
-            <p class="card-text">
-                <b>Owned By : <i><%= listing.owner.username %></i></b><br>
-                <%= listing.description %> <br>
-                    &#8377; <%= listing.price.toLocaleString("en-IN") %> <br> <!--  -->
-                <%= listing.location %> <br>
-                <%= listing.country %>
-            </p>
+<div class="container">
+    <div class="row">
+        <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 mt-3">
+            <h3><%= listing.title %></h3>
         </div>
-    </div>
-    <% if (currUser && listing.owner._id.equals(currUser._id)) { %>
-        <div class="col-10 offset-1 mt-1 mb-2">
-            <div class="btns">
-                <a href="/listings/edit/<%= listing.id %>">
-                    <button class="btn btn-dark ml-2">Edit&nbsp;&nbsp;<i class="fas fa-edit"></i></button>
-                </a>&nbsp;&nbsp;&nbsp;&nbsp;
-                <form method="post" action="/listings/<%= listing.id %>?_method=delete">
-                    <button class="btn btn-dark edit-btn">Delete&nbsp;&nbsp;<i class="fa-solid fa-trash"></i></button>
+        <div class="card col-12 mt-3">
+            <img class="card-img-top mb-2" src="<%= listing.image.url %>" alt="Listing Image">
+            <div class="card-body">
+                <p class="card-text">
+                    <b>Owned By: <i><%= listing.owner.username %></i></b><br>
+                    <%= listing.description %><br>
+                    &#8377; <%= listing.price.toLocaleString("en-IN") %><br>
+                    <%= listing.location %><br>
+                    <%= listing.country %>
+                </p>
+            </div>
+        </div>
+        <% if (currUser && listing.owner._id.equals(currUser._id)) { %>
+            <div class="col-12 mt-3">
+                <a href="/listings/edit/<%= listing.id %>" class="btn btn-dark">Edit&nbsp;&nbsp;<i class="fas fa-edit"></i></a>
+                <form method="post" action="/listings/<%= listing.id %>?_method=delete" style="display:inline;">
+                    <button type="submit" class="btn btn-danger">Delete&nbsp;&nbsp;<i class="fas fa-trash-alt"></i></button>
                 </form>
             </div>
-        </div>
-    <% } %>
-    <hr>
-    <div class="col-10 offset-1 mb-3 mt-2" >
-        <% if (currUser) { %>
-            <h4>Leave A Review</h4>
-            <form method="post" action="/listings/<%= listing.id %>/reviews" novalidate class="needs-validation">
-                <div class="mb-2 mt-2">
-                    <label class="form-label" for="rating">Rating&nbsp;<i class="fa-regular fa-star"></i></label>
-                    <fieldset class="starability-slot">
-                        <input type="radio" id="no-rate first-rate1" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
-                        <label for="first-rate1" title="Terrible">1 star</label>
-                        <input type="radio" id="first-rate2" name="review[rating]" value="2" />
-                        <label for="first-rate2" title="Not good">2 stars</label>
-                        <input type="radio" id="first-rate3" name="review[rating]" value="3" />
-                        <label for="first-rate3" title="Average">3 stars</label>
-                        <input type="radio" id="first-rate4" name="review[rating]" value="4" />
-                        <label for="first-rate4" title="Very good">4 stars</label>
-                        <input type="radio" id="first-rate5" name="review[rating]" value="5" />
-                        <label for="first-rate5" title="Amazing">5 stars</label>
-                    </fieldset>
-                </div>
-                <div class="mb-2 mt-2">
-                    <label class="form-label" for="comment">Comments...<i class="fa-solid fa-comment"></i></label>
-                    <textarea placeholder="Write Your Review ..." class="form-control" 
-                    name="review[comment]" id="comment" cols="50" rows="2"></textarea>
-                    <div class="invalid-feedback">Please Submit Some Comment And Review ...</div>
-                </div>
-                <button class="mt-3 btn btn-outline-success ">Submit&nbsp;<i class="fa fa-paper-plane"></i></button>
-            </form>
-            <hr>
         <% } %>
-        
-            <p><b>All Reviews</b></p>
-            <div class="row ">
-                <% for(review of listing.reviews) { %>
-                    <div class="card col-5 p-2 mt-2 ms-5 review-card">
-                        <div class="card-body mb-2">
-                            <h5 class="card-title">@<%= review.author.username %></h5>
-                            <p class="starability-result card-text mb-2" data-rating="<%= review.rating %>"></p>
-                            <p class="card-text"><%= review.comment %></p>
-                        </div>
-                        <form method="post" action="/listings/fire/<%= listing.id %>/reviews/<%= review.id %>?_method=delete">
-                            <button class="btn btn-outline-danger "
-                                style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
-                                Delete&nbsp;&nbsp;<i class="fa-solid fa-trash"></i>
-                            </button>
-                        </form>
-                    </div>
-                <% } %>
-            </div>
-        
     </div>
-    <div class="col-10 offset-1 mb-4">
-        <h3>Where you'll be</h3>
-        <div id="map"></div>
+    <div class="row">
+        <div class="col-12 col-lg-8 offset-lg-2 mt-3">
+            <h4>Leave A Review</h4>
+            <form method="post" action="/listings/<%= listing.id %>/reviews" class="needs-validation" novalidate>
+                <!-- Form content for reviews -->
+            </form>
+        </div>
+        <div class="col-12 col-lg-8 offset-lg-2 mt-3">
+            <h3>Where you'll be</h3>
+            <div id="map" style="width: 100%; height: 400px;"></div>
+        </div>
     </div>
 </div>
 <script src="/js/map.js"></script>
